# schema-for-xml-schema

./: Makefile  Makefile.in  README.md  configure  configure.ac  xml-catalog-strict.xml  xml-schema.sch  xml-schema.sch.xsl  xmlschema-instance.sch  xmlschema-instance.sch.xsl
